@@ -12,6 +12,7 @@ For a detailed list of changes, please see ChangeLog.
  * Bug fixes:
    - Properly handle databases that don't contain username or password
      fields (LP: #1384710)
+   - Make sure all dialogs have transient parents (LP: #1386064)
 
 0.39 (2014-07-31)
 
